tests/success/mismatched_switch.bz
function main()
{
	let n = 3;
	switch (n)
	{
		1 => 1,
		2 => 1.23,
		3 => {},
		4 => "hello",
		else => 'c',
	}
}
