tests/error/type_match/switch_expr_match_error.bz
function test(val: int32)
{
	let i = 0;
	let _: &auto = switch (val) {
		0, 1, 2 => i,
		3, 4, 5 => 1,
		else => 2,
	};
}
